--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,7 @@
 @viewport { width: device-width; scale: 1; }
 
 h1 {
-  font-family: "reklame-script"
+  font-family: "reklame-script sans-serif"
  }
+
+.tk-reklame-script
