--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,12 @@ h1 {
 
  h2 {
   text-transform: uppercase;
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   color: white;
   text-align:  center;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
-  padding-bottom: 1em;
+  padding-bottom: .5em;
  }
 
 body {
@@ -74,8 +74,8 @@ body {
     background-image: url(../images/asset2.png);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
 }
 
 .soc-facebook {
