--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 }
 
 h1 {
-  font-family: century gothic;
+  font-family: serif;
   color: white;
   text-align: center;
  }
@@ -48,7 +48,7 @@ body {
 }
  h3 {
   text-transform: uppercase;
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   color:  white;
   text-align:  center;
   width: 80%;
