--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,13 @@ html {
   text-size-adjust: 100%;
 }
 
-h1 {
-  font-family: 'Pacifico', cursive;
+.name {
+  font-family: 'Courgette', cursive;
   color: white;
   text-align: center;
+  padding-bottom: 0;
+  margin: 0;
+  font-size: 4em;
  }
 
  h2 {
