removed under construction

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,16 @@ body {
 
 }
 
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 43em) {
+  .text {
+    padding-top: 1em;
+  }
+  .dog {
+    padding-top: 2em;
+  }
+}
+
+@media only screen and (min-width: 64em) {
   .dog {
     width: 100%;
   }
